--- a/1.html
+++ b/1.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
 </head>
 <body>
-<ol>
-  <li><a href="1.html" target="_blank" title="html">html</a></li>
-  <li><a href="2.html" target="_blank" title="css">css</a></li>
-  <li><a href="3.html" target="_blank" title="Javascript">Javascript</a></li>
-</ol>
+  <h1><a href="index.html">web</a></h1>
+  <ol>
+    <li><a href="1.html">html</a></li>
+    <li><a href="2.html">css</a></li>
+    <li><a href="3.html">Javascript</a></li>
+  </ol>
 <h1>HTML이란 무엇인가?</h1>
 HTML(Hyper Text Markup Language)은 가장 단순한 형태의 웹 언어이다.
 <br>웹 서버에 HTML 문서를 저장하고 있다가 클라이언트가 특정 HTML 페이지를 요청하면 해당 HTML 문서를 클라이언트로 전송한다.
