--- a/1.html
+++ b/1.html
@@ -3,11 +3,24 @@
 <head>
   <title>web- html</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:blue;
+      text-decoration: none;
+    }
+    .saw {
+      color:gray;
+    }
+    h1 {
+      font-size: 45px; text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">web</a></h1>
+  <h1><a href="index.html" class="saw">web</a></h1>
   <ol>
-    <li><a href="1.html">html</a></li>
+    <li><a href="1.html"
+    style="color:red;text-decoration:underline">html</a></li>
     <li><a href="2.html">css</a></li>
     <li><a href="3.html">Javascript</a></li>
   </ol>
