--- a/2.html
+++ b/2.html
@@ -3,15 +3,28 @@
 <head>
   <title>web- html</title>
   <meta charset="utf-8">
+  <style>
+  a {
+      color:blue;
+      text-decoration: none;
+    }
+    h1 {
+      font-size: 45px; text-align: center;
+    }
+    .saw {
+      color: gray;
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">web</a></h1>
+  <h1><a href="index.html" class="saw">web</a></h1>
   <ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">css</a></li>
+    <li><a href="1.html" class="saw">html</a></li>
+    <li><a href="2.html"
+      style="color:red;text-decoration:underline">css</a></li>
     <li><a href="3.html">Javascript</a></li>
   </ol>
-<h1>CSS란 무엇인가?</h1>
+<h2>CSS란 무엇인가?</h2>
 <br>기존의 HTML은 웹 문서를 다양하게 설계하고 수시로 변경하는데 많은 제약이 따르는데,
 <br>이를 보완하기 위해 만들어진 것이 스타일 시트이고 스타일 시트의 표준안이 바로 CSS이다. 간단히 스타일 시트라고도 한다.
 <br>HTML을 이용해서 웹 페이지를 제작할 경우 전반적인 틀에서 세세한 글꼴 하나 하나를 일일이 지정해주어야 하지만,
