--- a/3.html
+++ b/3.html
@@ -3,13 +3,26 @@
 <head>
   <title>web- html</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:blue;
+      text-decoration: none;
+    }
+    .saw {
+      color: gray;
+    }
+    h1 {
+      font-size: 45px; text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">web</a></h1>
+  <h1><a href="index.html" class="saw">web</a></h1>
   <ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">css</a></li>
-    <li><a href="3.html">Javascript</a></li>
+    <li><a href="1.html" class="saw">html</a></li>
+    <li><a href="2.html" class="saw">css</a></li>
+    <li><a href="3.html"
+      style="color:red;text-decoration:underline">Javascript</a></li>
   </ol>
 <h2>Javascript이란 무엇인가?</h2>
 <p>웹 페이지에서 사용자로부터 특정 이벤트나 입력 값을 받아 동적인 처리를 목적으로 고안된 객체 기반의 스크립트 프로그래밍 언어.
