--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
   <title>web- html</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:blue;
+      text-decoration: none;
+    }
+    h1 {
+      font-size: 45px; text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">web</a></h1>
+  <h1><a href="index.html"
+    style="color:red;text-decoration:underline">WEB</a></h1>
   <ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">css</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">Javascript</a></li>
   </ol>
 <h2>Web이란 무엇인가?</h2>
-<p>웹(web)
+<p><a href="https://youtu.be/7ujWkFyw01g">웹(web)</a>
 <br>문자 위주의 서비스에서 탈피하여, 문자·영상·음성등이
 <br>혼합된 멀티미디어 정보를 마치 거미줄과 같은 통신망으로 세계 각지에 연결시켜 주는 서비스
 <br>[네이버 지식백과] 웹 (매일경제, 매경닷컴)
